k8s/development-remote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-auth-flapi-deployment
  namespace: dev-auth-flapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-auth-flapi
  template:
    metadata:
      labels:
        app: dev-auth-flapi
    spec:
      containers:
      - name: keycloak
        image: docker.io/${DOCKER_HUB_USERNAME}/keycloak-flapi-theme:${TAG_VERSION}
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - |
            /opt/keycloak/bin/kc.sh start --optimized \
            --db-url=jdbc:mariadb://109.234.165.225:3306/reco5282_auth_flapi_development-remote \
            --db-username=$(KC_DB_USERNAME) \
            --db-password=$(KC_DB_PASSWORD) \
            --hostname=dev.auth.flapi.org \
            --hostname-strict=false \
            --proxy-headers=xforwarded \
            --http-enabled=true \
            --http-port=8080 \
            --log-level=DEBUG
        ports:
        - containerPort: 8080
