k8s/development-remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-auth-flapi-service
  namespace: dev-auth-flapi
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: dev-auth-flapi
